# Crypt-omp

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  build.yml  codeql.yml
cmake/: FindBotan.cmake  FindGroupSourcesByFolder.cmake
src/: crypt-component.cpp  crypt-component.hpp  hash-function.cpp  hash-function.hpp  interface.hpp  main.cpp  natives.cpp  natives.hpp
